--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 
 <script type="text/javascript">
 	$(function() {
-		$("#tree_view").jTree();
+		$("#tree_view").jTree({
+            hideTime : 2000
+        });
 	});
 </script>
 
