--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="city"><a href="/Энергодар">Энергодар</a></div>
         </div>
     </div>
-    <div class="literal">
+    <div class="literal active">
         <div class="title">Я</div>
         <div class="list">
             <div class="city"><a href="/Ялта">Ялта</a></div>
@@ -90,7 +90,7 @@
 <script type="text/javascript">
 	$(function() {
 		$("#tree_view").jTree({
-            hideTime : 2000
+            hideTime : 500
         });
 	});
 </script>
